# active-statistics

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  captions.json  entrypoint.sh  mypy.ini  setup.py  template.yaml
backend/: .example.env  .gitignore  Dockerfile.deploy  mypy.ini  pyproject.toml  setup.py
backend/active_statistics/: app_logging.py  constants.py  exceptions.py  rq_settings.py  rq_tasks.py  server.py
backend/active_statistics/gui/: download_strava_data_tab.py  gui.py  image_tab.py  plot_tabs.py  tab_group.py  table_tab.py  tabs.py  trivia_tabs.py
backend/active_statistics/static/: buttons_script.js  home_script.js  plot_tab_script.js  styles.css  table_tab_script.js
backend/active_statistics/tabs/: image_tab.py  plot_tabs.py  tab_group.py  table_tab.py  tabs.py  trivia_tabs.py
backend/active_statistics/templates/: download_data_main_content_container.html  home.html  index.html  plot_tab_main_content_container.html  table_tab_main_content_container.html
backend/active_statistics/utils/: environment_variables.py  human_readable_time.py  local_storage.py  redis.py  routes.py  rq.py  s3.py  sentry.py
backend/backend/: communication_schema.py  exceptions.py  main.py
backend/backend/gui/: gui.py  tabs.py
backend/backend/tabs/: animated_polyline_grid_tab.py  plot_tabs.py  polyline_grid_tab.py  tab_group.py  table_tab.py  tabs.py  trivia_tabs.py
backend/backend/utils/: aws_lambda.py  dynamodb.py  environment_variables.py  routes.py  s3.py
backend/envs/: dev_local.env  dev_s3.env  prod.sh
backend/tests/: conftest.py
(+211 files in other folders)
